# checkpoint3

./: .gitignore  Readme.md
checkpoint/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
checkpoint/config/: distributed.docker.env  distributed.env  distributed.physical.env
checkpoint/docker/: Dockerfile  Dockerfile.cpu  docker-compose.test.yml  docker-compose.yml
checkpoint/docs/: distributed.md
checkpoint/scripts/: build.sh  run_tests.sh  test_docker.sh  verify.sh
checkpoint/src/: __init__.py
checkpoint/src/bindings/: __init__.py  native_loader.py
checkpoint/src/distributed/: __init__.py  coordinator.py  shared_fs.py
checkpoint/src/native/: Makefile  allocator.c  allocator.h  api.c  config.h  interceptor.c  interceptor.h  snapshot.c  snapshot.h  types.h
checkpoint/src/runtime/: __init__.py  allocator.py  snapshot_runtime.py  training_runtime.py
checkpoint/tests/: conftest.py
checkpoint/tests/integration/: test_distributed.py  test_finetuning.py  test_gpt2_inference.py
checkpoint/tests/unit/: test_allocator.py  test_distributed_config.py  test_shared_fs.py  test_training_runtime.py
cuda/: index.cu
solutions/: 1.md  questions.md  working.md
solutions/1/: 1.md
